--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "tube-vj",
   "version": "0.0.1",
   "description": "Play VJ with YouTube",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "author": "otiai10",
   "license": "MIT",
