--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tube-vj",
+  "name": "Tube.VJ",
   "version": "0.0.1",
   "description": "Play VJ with YouTube",
   "main": "main.js",
