--- a/angular.json
+++ b/angular.json
@@ -3,11 +3,11 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "tube-vj": {
+    "master": {
       "root": "",
-      "sourceRoot": "src",
+      "sourceRoot": "src/master",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "master",
       "schematics": {
         "@schematics/angular:component": {
           "style": "sass"
@@ -17,17 +17,53 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tube-vj",
-            "index": "src/index.html",
-            "main": "src/main.ts",
+            "outputPath": "dist/master-window",
+            "index": "src/master/index.html",
+            "main": "src/master/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/master/favicon.ico",
+              "src/master/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/master/styles.sass"
+            ],
+            "scripts": [],
+            "es5BrowserSupport": true
+          },
+
+          "configurations": {
+
+          }
+        }
+      }
+    },
+    "controller": {
+      "root": "",
+      "sourceRoot": "src/controller",
+      "projectType": "application",
+      "prefix": "cntrl",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "sass"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/controller-window",
+            "index": "src/controller/index.html",
+            "main": "src/controller/main.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "src/tsconfig.app.json",
+            "assets": [
+              "src/controller/favicon.ico",
+              "src/controller/assets"
+            ],
+            "styles": [
+              "src/controller/styles.sass"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -59,37 +95,26 @@
             }
           }
         },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "tube-vj:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "tube-vj:build:production"
-            }
-          }
-        },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tube-vj:build"
+            "browserTarget": "controller:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
+            "main": "src/controller/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.sass"
+              "src/controller/styles.sass"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/controller/favicon.ico",
+              "src/controller/assets"
             ]
           }
         },
@@ -106,35 +131,7 @@
           }
         }
       }
-    },
-    "tube-vj-e2e": {
-      "root": "e2e/",
-      "projectType": "application",
-      "prefix": "",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "tube-vj:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "tube-vj:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
     }
   },
-  "defaultProject": "tube-vj"
+  "defaultProject": "controller"
 }
