--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,7 @@
             "main": "src/master/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/master/karma.conf.js",
+            "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.sass"
             ],
@@ -137,7 +137,7 @@
             "main": "src/controller/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/controller/karma.conf.js",
+            "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.sass"
             ],
