--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "too -c 'ng build master --watch' -c 'ng build controller --watch' -c 'electron .'",
     "build": "ng build master && ng build controller",
     "lint": "ng lint",
-    "test": "ng build master && ng build controller && ng lint && ng test --watch=false"
+    "test": "ng build master && ng build controller && ng lint && ng test --codeCoverage=true --watch=false"
   },
   "private": true,
   "dependencies": {
