--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.sass",
+              "src/master/screen.sass"
             ],
             "scripts": [],
             "es5BrowserSupport": true
