--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist/",
     "sourceMap": true,
     "declaration": false,
     "module": "es2015",
@@ -15,6 +15,7 @@
       "node_modules/@types"
     ],
     "lib": [
+      "es6",
       "es2018",
       "dom"
     ]
