--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "node": "10.15.0",
     "npm": "6.5.0"
   },
-  "main": "dist/main.js",
+  "main": "dist/main/main.js",
   "scripts": {
+    "postinstall": "echo 'See: https://github.com/electron/electron/issues/10167#issuecomment-319516597\n' && rm -rf ./node_modules/electron/node_modules/@types/node",
     "start": "tsc -p src/main && too -c 'ng build master --watch' -c 'ng build controller --watch' -c 'electron .'",
     "build": "ng build master && ng build controller",
-    "app": "npm run build && tsc -p src/main && electron .",
+    "app": "tsc -p src/main && electron .",
     "lint": "ng lint",
     "test": "ng build master && ng build controller && ng lint && ng test --codeCoverage=true --watch=false"
   },
@@ -24,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "googleapis": "^39.2.0",
     "rxjs": "~6.3.3",
     "spectre.css": "^0.5.8",
     "tslib": "^1.9.0",
@@ -37,7 +39,6 @@
     "@otiai10/too": "git+https://git@github.com/otiai10/too.js.git",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.46",
     "codelyzer": "~4.5.0",
     "electron": "^4.1.4",
     "jasmine-core": "~2.99.1",
